<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#78d0d2"
        android:gravity="center_horizontal" >
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="#404048"
        android:gravity="center_horizontal|center_vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/menu"
            android:textColor="#87d9b5"
            android:textSize="38sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/revision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </TableRow>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="95"
        android:background="@drawable/sfondo_verde"
        android:orientation="vertical" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="30" >

            <LinearLayout
                android:id="@+id/padding"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="10"
                android:gravity="center|right"
                android:orientation="vertical"
                android:visibility="invisible" >
            </LinearLayout>

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="15"
                android:gravity="center_vertical|center_horizontal" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical|center_horizontal" >

                        <Button
                            android:id="@+id/button_continuos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_continuos" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical|center_horizontal" >

                        <TextView
                            android:id="@+id/label_continuos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/continuos"
                            android:textColor="@android:color/black" />
                    </LinearLayout>
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="15"
                android:gravity="center_vertical|center_horizontal" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical|center_horizontal" >

                        <Button
                            android:id="@+id/button_pulsed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_pulsed" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical|center_horizontal" >

                        <TextView
                            android:id="@+id/label_pulsed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/pulsed"
                            android:textColor="@android:color/black" />
                    </LinearLayout>
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/simbolo_frequenza"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="20"
                android:gravity="center|right"
                android:visibility="invisible" >

                <TextView
                    android:id="@+id/label_frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/freq"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/barra_orizzontale"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="40"
                android:gravity="center_vertical|center_horizontal"
                android:visibility="invisible" >

                <TextView
                    android:id="@+id/uno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/seek_bar_frequency"
                    android:layout_alignLeft="@+id/seek_bar_frequency"
                    android:gravity="left"
                    android:text="@string/uno"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/due"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/seek_bar_frequency"
                    android:layout_toRightOf="@+id/uno"
                    android:gravity="center"
                    android:text="@string/due"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/seek_bar_frequency"
                    android:layout_toRightOf="@+id/due"
                    android:gravity="center"
                    android:text="@string/tre"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/quattro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/seek_bar_frequency"
                    android:layout_toRightOf="@+id/tre"
                    android:gravity="center"
                    android:text="@string/quattro"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/cinque"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/seek_bar_frequency"
                    android:layout_toRightOf="@+id/quattro"
                    android:gravity="right"
                    android:text="@string/cinque"
                    android:textColor="@android:color/white" />

                <SeekBar
                    android:id="@+id/seek_bar_frequency"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:maxHeight="14dip"
                    android:minHeight="4dip"
                    android:progressDrawable="@drawable/progress"
                    android:thumb="@drawable/thumb"
                    android:thumbOffset="0dip" />
            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center_vertical|center_horizontal" >

            <ImageView
                android:id="@+id/linea"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/linea"
                android:src="@drawable/orizzontale" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="20" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="45"
                android:gravity="center_vertical|center_horizontal|right"
                android:paddingRight="5dp" >

                <Button
                    android:id="@+id/button_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_time" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="25"
                android:gravity="center_vertical|center_horizontal|left"
                android:paddingLeft="5dp" >

                <Button
                    android:id="@+id/button_energy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_energy" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="30"
                android:gravity="center_vertical|center_horizontal" >

                <Button
                    android:id="@+id/button_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_confirm" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="25" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="70"
                android:gravity="center_vertical|center_horizontal" >

                <SeekBar
                    android:id="@+id/seek_bar_energy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:maxHeight="4dip"
                    android:minHeight="4dip"
                    android:progressDrawable="@drawable/progress"
                    android:thumb="@drawable/thumb"
                    android:thumbOffset="0dip" />

                <TextView
                    android:id="@+id/min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/seek_bar_energy"
                    android:layout_below="@+id/seek_bar_energy"
                    android:gravity="left"
                    android:text="@string/min"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/seek_bar_energy"
                    android:layout_below="@+id/seek_bar_energy"
                    android:gravity="right"
                    android:text="@string/max"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="30"
                android:gravity="center_vertical|center_horizontal" >

                <Button
                    android:id="@+id/button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_back" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="20" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="17"
                android:gravity="center" >

                <Button
                    android:id="@+id/exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/exit_normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="25"
                android:gravity="right" >

                <Button
                    android:id="@+id/energy"
                    style="@style/custom_button_set_value"
                    android:layout_width="130dp"
                    android:layout_height="35dp"
                    android:background="@drawable/custom_button_set_value"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/time"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="28"
                android:gravity="left" >

                <TextView
                    android:id="@+id/label_energy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/label_time"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="30"
                android:gravity="center_vertical|center_horizontal" >

                <Button
                    android:id="@+id/service"
                    style="@style/custom_button_set_value"
                    android:layout_width="130dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:background="@drawable/custom_button_set_value"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/service"
                    android:textColor="@android:color/black" />
            </LinearLayout>
        </TableRow>
    </LinearLayout>

    <TableRow>
    </TableRow>

    <LinearLayout>
    </LinearLayout>

</TableLayout>